tweaks to image settings

--- a/index.html
+++ b/index.html
@@ -96,22 +96,10 @@
       <h2 class="section-title">Featured Projects</h2>
 
       <div class="gallery-grid">
-        <picture>
-          <source srcset="images/project1.webp" type="image/webp" />
-          <img src="images/project1.jpg" alt="Cedar Deck Project" class="img-tile" loading="lazy" decoding="async" width="250" height="202" />
-        </picture>
-        <picture>
-          <source srcset="images/project2.webp" type="image/webp" />
-          <img src="images/project2.jpg" alt="Modern Bathroom Remodel" class="img-tile" loading="lazy" decoding="async" width="244" height="206" />
-        </picture>
-        <picture>
-          <source srcset="images/project3.webp" type="image/webp" />
-          <img src="images/project3.jpg" alt="Open-Concept Kitchen" class="img-tile" loading="lazy" decoding="async" width="275" height="183" />
-        </picture>
-        <picture>
-          <source srcset="images/project4.webp" type="image/webp" />
-          <img src="images/project4.jpg" alt="Basement Lounge" class="img-tile" loading="lazy" decoding="async" width="202" height="250" />
-        </picture>
+        <img src="images/project1.webp" alt="Cedar Deck Project" class="img-tile" loading="lazy" decoding="async" fetchpriority="low" width="250" height="202" />
+        <img src="images/project2.webp" alt="Modern Bathroom Remodel" class="img-tile" loading="lazy" decoding="async" fetchpriority="low" width="244" height="206" />
+        <img src="images/project3.webp" alt="Open-Concept Kitchen" class="img-tile" loading="lazy" decoding="async" fetchpriority="low" width="275" height="183" />
+        <img src="images/project4.webp" alt="Basement Lounge" class="img-tile" loading="lazy" decoding="async" fetchpriority="low" width="202" height="250" />
       </div>
     </div>
   </section>
