Add 404 page and footer link to navigate to it

--- a/404.html
+++ b/404.html
@@ -3,11 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Thank You | Ironwood Renos</title>
-  <meta name="description" content="Thanks for reaching out to Ironwood Renos. We will reply shortly." />
-  <link rel="canonical" href="https://ironwoodrenos.netlify.app/thank-you.html" />
+  <title>Page Not Found | Ironwood Renos</title>
+  <meta name="description" content="The page you are looking for does not exist. Navigate back to Ironwood Renos projects or contact us." />
+  <link rel="canonical" href="https://ironwoodrenos.netlify.app/404.html" />
   <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#6b4f3b" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ironwoodrenos.netlify.app/404.html" />
+  <meta property="og:title" content="Page Not Found | Ironwood Renos" />
+  <meta property="og:description" content="This page could not be found. Return home or contact Ironwood Renos." />
+  <meta property="og:image" content="https://ironwoodrenos.netlify.app/images/ironwood-renos-banner-1200.webp" />
+  <meta property="og:site_name" content="Ironwood Renos" />
+  <meta property="og:image:alt" content="Ironwood Renos renovation hero image" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Page Not Found | Ironwood Renos" />
+  <meta name="twitter:description" content="This page could not be found. Return home or contact Ironwood Renos." />
+  <meta name="twitter:image" content="https://ironwoodrenos.netlify.app/images/ironwood-renos-banner-1200.webp" />
 
   <link rel="preload" as="style" href="css/style.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -44,13 +57,15 @@
   </header>
 
   <main id="main-content">
-    <section class="page-hero">
+    <section class="not-found">
       <div class="container">
-        <p class="eyebrow">Thank you</p>
-        <h1>We received your message</h1>
-        <p>We'll respond soon with next steps and a timeline estimate. In the meantime, feel free to explore more of our work.</p>
-        <div class="actions">
-          <a class="btn-primary-sm" href="index.html">Home</a>
+        <div class="not-found__inner">
+          <span class="not-found__code">Error 404</span>
+          <h1>We can't find that page</h1>
+          <p>The link may be out of date or the page has moved. Let's get you back to the projects and contact options.</p>
+          <div class="not-found__actions">
+            <a class="btn-primary-sm" href="index.html">Return home</a>
+          </div>
         </div>
       </div>
     </section>
