--- a/contact.html
+++ b/contact.html
@@ -118,6 +118,7 @@
   <footer>
     <div class="container footer-bar">
       <p>&copy; <span id="year"></span> Ironwood Renos. Portfolio project by Code Forged Digital.</p>
+      <a class="footer-btn" href="404.html">404 page</a>
       <a href="https://www.codeforgeddigital.ca/" class="footer-logo" target="_blank" rel="noopener noreferrer">
         <img src="images/CodeForgedDigitalLogo.webp" alt="Code Forged Digital" loading="lazy" decoding="async" />
       </a>
